# MaidRobotSystem

./: .clang-format  .gitignore  CHANGELOG  Changelog  MaidRobotSystem.code-workspace  README.md  ROS2.code-workspace  Simulator.code-workspace  TODO.md
src/planetary_module/ros/package/dev_maid_robot_system/: package.xml  setup.cfg  setup.py
src/planetary_module/ros/package/dev_maid_robot_system/launch/head_unit/: photo_to_video_node.py
src/planetary_module/ros/package/maid_robot_system/: CMakeLists.txt  README.md  package.xml
src/planetary_module/ros/package/maid_robot_system/include/maid_robot_system/: common_structure.hpp  emotion.hpp  workspace_config.hpp
src/planetary_module/ros/package/maid_robot_system/include/maid_robot_system/config/: project_config.hpp
src/planetary_module/ros/package/maid_robot_system/include/maid_robot_system/ros/: node_name.hpp  packages_name.hpp  parameter_name.hpp  topic_name.hpp
src/planetary_module/ros/package/maid_robot_system/launch/: maid_robot_system.launch.py  maid_robot_system_expansion.launch.py  node_hitomi.py  node_hitomi_for_ciro.py  node_hitomi_for_masiro.launch.py  rosbridge_websocket.launch.py
src/planetary_module/ros/package/maid_robot_system/launch/develop/: sample_node.launch.py
src/planetary_module/ros/package/maid_robot_system/launch/head_unit/: head_unit.launch.py  head_unit_expansion.launch.py  node_hitomi_for_ciya.launch.py  node_image_compressed.launch.py  node_image_transport.launch.py  node_mitumeru.launch.py  unit_head.launch.py
src/planetary_module/ros/package/maid_robot_system/launch/head_unit/nodes/: eye_node.launch.py  head_control_node.launch.py  hitomi_node.launch.py  hitomi_node.py  image_transport_node.launch.py  kubi_node.py  lip_node.launch.py  mitumeru_node.launch.py  mitumeru_node.py  neck_node.launch.py  voice_recognition_node.launch.py
src/planetary_module/ros/package/maid_robot_system/launch/maid_robot_system/: head_unit.launch.py  simulator.launch.py  waist_down_unit.launch.py
src/planetary_module/ros/package/maid_robot_system/launch/maid_robot_system/head_unit/: eye_node.launch.py  head_control_node.launch.py  (+2 more)
src/planetary_module/ros/package/maid_robot_system/launch/sample/: node_sample.launch.py  sample_node.launch.py
src/planetary_module/ros/package/maid_robot_system/msg/: BodyMessage.msg  BoundingBoxes.msg  CastResume.msg  ClusterLeg.msg  Collected.msg  DancingMessage.msg  EulerInt16.msg  GazingAhead.msg  HtmlPage.msg  MotionDataEulerInt16.msg  OrderReceptionist.msg  StateBehavior.msg
src/planetary_module/ros/package/maid_robot_system/nodes/condition_monitoring_node/: CMakeLists.txt
src/planetary_module/ros/package/maid_robot_system_develop/: CMakeLists.txt  package.xml
src/planetary_module/ros/package/maid_robot_system_develop/include/maid_robot_system_develop/: workspace_config.hpp
src/planetary_module/ros/package/maid_robot_system_develop/launch/: node_template.launch.py  node_template.py
src/planetary_module/ros/package/maid_robot_system_develop/nodes/mrs_cloud_node/: CMakeLists.txt
src/planetary_module/ros/package/maid_robot_system_develop/nodes/template_node/: CMakeLists.txt
src/planetary_module/ros/package/maid_robot_system_interfaces/: CMakeLists.txt  package.xml
src/planetary_module/ros/package/maid_robot_system_interfaces/include/maid_robot_system_interfaces/: angle_calculus.hpp  interfaces.hpp
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/: BellInfo.msg  BodyMessage.msg  BoundingBox.msg  BoundingBoxes.msg  ClusterArm.msg  ClusterLocation.msg  Collected.msg  DancingMessage.msg  EulerFloat.msg  EventValue.msg  FramesNo.msg  Instructions.msg  MotionDataEulerInt16.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/aruco/: ArMarkers.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/classes/: Quaternion.msg  Vector3.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/detection/: PoseDetection.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/drawing/: Rect.msg  RectFloat.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/euler/: EulerFloat.msg  EulerInt16.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/format/: VideoInfo.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/math/: EulerFloat.msg  EulerInt16.msg  Quaternion.msg  Rect.msg  RectFloat.msg  Vector3.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/mrs/: MrsEye.msg  MrsHeadStatus.msg  MrsHitomi.msg  MrsLip.msg  MrsNeck.msg  MrsVoice.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/pose/: BodySide.msg  Landmark.msg  PoseDetection.msg  PoseLandmarkModel.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/msg/sample/: MrsSample.msg
src/planetary_module/ros/package/maid_robot_system_interfaces/srv/: MediaPipePoseLandmarkDetection.srv  VideoCapture.srv  VideoDeviceInfo.srv
src/planetary_module/ros/package/maid_robot_system_py/: README.md  TODO.md  package.xml  setup.cfg  setup.py
src/planetary_module/ros/package/maid_robot_system_py/asset/: README.md
src/planetary_module/ros/package/maid_robot_system_py/launch/head_unit/: detect_ar_node.launch.py  face_recognition_in_node.launch.py  face_recognition_node.launch.py  mediapipe_ext_node.launch.py  mediapipe_node.launch.py  recognition_in_node.launch.py  video_capture_node.launch.py
src/planetary_module/ros/package/maid_robot_system_py/maid_robot_system_py/: detect_ar_node.py  face_recognition_in_node.py  face_recognition_node.py  mediapipe_ext_node.py  mediapipe_node.py  recognition_in_node.py  recognition_threaded_in_node.py  video_capture_node.py
src/planetary_module/ros/package/maid_robot_system_py/maid_robot_system_py/features/: roscommunication.py
src/planetary_module/ros/package/maid_robot_system_py/maid_robot_system_py/input_device/: video_capture_node.py
src/planetary_module/ros/package/maid_robot_system_py/maid_robot_system_py/utils/: cv_fps_calc.py  cvfpscalc.py  usb_video_device.py  usbvideodevice.py
(+488 files in other folders)
