<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dev_maid_robot_system</name>
  <version>0.23.7</version>
  <description>This package is for Maid Robot System(Develop) for ROS2</description>
  <maintainer email="developer@masiro-project.com">Akari</maintainer>
  <license>MIT</license>

  <depend>maid_robot_system_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
