<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maid_robot_system_interfaces</name>
  <version>0.23.4</version>
  <description>This package is Maid Robot System interface for ROS2</description>
  <maintainer email="developer@masiro-project.com">Akari</maintainer>
  <license>MIT License</license>
  <url type="website">https://www.masiro.cafe/</url>
  <author email="developer@masiro-project.com">Akari</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
